# mc_naoqi

./: CMakeLists.txt
CMakeModules/: Findmc_naoqi_3rd_party_qi.cmake
etc/: mc_rtc_pepper.yaml
src/: CMakeLists.txt  MCControlNAOqi.cpp  MCControlNAOqi.h  MCControlNAOqi_ALMotion.cpp  MCControlNAOqi_DCM.cpp  main.cpp
